# brain-hub

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
adapters/: README.md  pyproject.toml
adapters/fixtures/antigravity/: run-complete.json
adapters/fixtures/claude-code/: session-end.json
adapters/fixtures/codex/: session-complete.json
adapters/fixtures/cursor/: stop.json
adapters/manifests/: adapter.schema.json  antigravity.adapter.json  claude-code.adapter.json  codex.adapter.json  cursor.adapter.json  generic.adapter.json
adapters/scripts/: benchmark_hook.py
adapters/src/brainhub_adapters/: __init__.py  antigravity.py  claude.py  cli.py  codex.py  cursor.py  deliver.py  hook.py  manifest.py  model.py  normalize.py  quarantine.py  redaction.py  spool.py  watch.py
adapters/tests/: test_codex_hook_launcher.py  test_contract.py  test_deliver.py  test_manifests.py  test_plugin_package.py  test_quarantine.py  test_spool.py  test_watch.py
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.test.ts  api.ts  demoGraph.ts  styles.css  types.ts  vite-env.d.ts
apps/web/src/components/: DetailsDrawer.tsx  (+8 more)
cloud/: README.md  docker-compose.yml
cloud/migrations/: 001_initial.sql  002_atomic_sync_ingest.sql  003_least_privilege_roles.sql
cloud/tests/: sync_ingest.sql
deploy/: Dockerfile.api  Dockerfile.web  nginx.conf
docs/: architecture.md  data-contract.md  licensing.md  marketplace.md  operations.md  roadmap.md  security.md
evaluations/: README.md  brainhub_mcp.xml
plugins/brain-hub/: .mcp.json  MARKETPLACE_TESTS.md  README.md
plugins/brain-hub/.codex-plugin/: plugin.json
plugins/brain-hub/hooks/: hooks.json
plugins/brain-hub/scripts/: capture_hook.py  preflight.py
schemas/: cloudevent.schema.json  sync-batch.schema.json
scripts/: __init__.py  install.ps1  install.py  install.sh  verify_contracts.py
(+5 files in other folders)
