[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "brainhub-core"
version = "0.1.0"
description = "Local-first evidence-backed graph memory for AI agent workstreams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Brain Hub contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "keyring>=25,<26",
  "mcp>=1.27,<2",
  "networkx>=3.4,<4",
  "pydantic>=2.8,<3",
  "pynacl>=1.5,<2",
  "semble[mcp]>=0.1.0",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
brainhub = "brainhub.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/brainhub"]
artifacts = ["packages/core/src/brainhub/web_dist/**"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages/core/tests"]
pythonpath = ["packages/core/src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
